--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,44 +6,129 @@
   <title>Macro Recipe Generator</title>
   <style>
     body {
-      font-family: sans-serif;
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
       padding: 2rem;
-      max-width: 600px;
+      max-width: 800px;
       margin: auto;
     }
-    input, button, select {
-      padding: 0.5rem;
-      margin: 0.5rem 0;
-      width: 100%;
+
+    h1 {
+      text-align: center;
     }
-    pre {
-      background: #f4f4f4;
+
+    form {
+      margin-bottom: 2rem;
+      display: flex;
+      flex-direction: column;
+    }
+
+    textarea {
       padding: 1rem;
-      white-space: pre-wrap;
+      font-size: 1rem;
+      resize: vertical;
+      min-height: 100px;
+      margin-bottom: 1rem;
+    }
+
+    button {
+      padding: 0.8rem;
+      font-size: 1rem;
+      background-color: #2e7d32;
+      color: white;
+      border: none;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    button:hover {
+      background-color: #1b5e20;
+    }
+
+    .card, .recipe-card {
+      background-color: white;
+      padding: 1.5rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      margin-bottom: 2rem;
+    }
+
+    .card button,
+    .recipe-card button {
+      margin-top: 1rem;
+    }
+
+    .save-btn {
+      background-color: #e91e63;
+    }
+
+    .shop-btn {
+      background-color: #1976d2;
+      margin-left: 10px;
+    }
+
+    .error {
+      color: red;
+    }
+
+    #historyList li, #favoritesList li {
+      margin-bottom: 0.5rem;
+      cursor: pointer;
+    }
+
+    #loadingMessage {
+      font-weight: bold;
+      color: #555;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    .recipe-ingredients ul {
+      padding-left: 1.2rem;
+    }
+
+    .recipe-instructions {
+      white-space: pre-line;
+    }
+
+    @media (max-width: 600px) {
+      body {
+        padding: 1rem;
+      }
+
+      textarea {
+        font-size: 0.9rem;
+      }
+
+      button {
+        font-size: 0.9rem;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>🍽️ Generate a Custom Recipe</h1>
+  <h1>🥗 Macro Recipe Generator</h1>
 
-  <form id="generateForm">
-    <input type="text" name="title" placeholder="Ingredient or dish (e.g., chicken)" />
-    <input type="text" name="ingredients" placeholder="Specific ingredients (comma separated)" />
-    <input type="text" name="diet" placeholder="Dietary restrictions (e.g., vegan, gluten-free)" />
-    <input type="number" name="minCalories" placeholder="Min Calories" />
-    <input type="number" name="maxCalories" placeholder="Max Calories" />
-    <input type="number" name="minProtein" placeholder="Min Protein (g)" />
-    <input type="number" name="maxProtein" placeholder="Max Protein (g)" />
-    <input type="number" name="minCarbs" placeholder="Min Carbs (g)" />
-    <input type="number" name="maxCarbs" placeholder="Max Carbs (g)" />
-    <input type="number" name="minFat" placeholder="Min Fat (g)" />
-    <input type="number" name="maxFat" placeholder="Max Fat (g)" />
+  <form id="promptForm">
+    <label for="promptText"><strong>Describe your ideal recipe:</strong></label>
+    <textarea id="promptText" placeholder="e.g. A high-protein beef stir fry under 500 calories..."></textarea>
     <button type="submit">Generate Recipe</button>
   </form>
 
-  <h2>📝 Result:</h2>
-  <pre id="result">Nothing yet...</pre>
+  <p id="loadingMessage" class="hidden">Generating your recipe...</p>
+  <p id="errorMessage" class="error hidden"></p>
 
-  <script src="script.js"></script>
+  <div id="recipeOutput" class="hidden"></div>
+
+  <h2>📜 Recipe History</h2>
+  <ul id="historyList"></ul>
+
+  <h2>⭐ Favorites</h2>
+  <button id="viewFavoritesBtn">View Favorites</button>
+  <ul id="favoritesList"></ul>
+
+  <script src="script.js" defer></script>
 </body>
 </html>
